deploy/traefik/k8s/middleware-headers.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: penguin-headers
  namespace: penguin
spec:
  headers:
    sslRedirect: true
    stsSeconds: 31536000
    frameDeny: true
    browserXssFilter: true
    contentTypeNosniff: true
    customFrameOptionsValue: "SAMEORIGIN"
    accessControlAllowMethods:
      - GET
      - POST
      - OPTIONS
      - PUT
      - DELETE
    accessControlAllowHeaders:
      - Content-Type
      - Authorization
    accessControlMaxAge: 100
    addVaryHeader
